--- a/index.css
+++ b/index.css
@@ -11,11 +11,11 @@ h3 {
   display: flex;
   flex-wrap: wrap;
   margin: 20px;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .flex-item {
-  width: 45%;
+  width: 500px;
   padding: 20px;
 }
 
