--- a/index.css
+++ b/index.css
@@ -15,12 +15,18 @@ h3 {
 }
 
 .flex-item {
-  width: 500px;
-  padding: 20px;
+  width: 400px;
+  border: 5px solid black;
+  border-radius: 5px;
+  margin: 20px;
 }
 
 .flex-item img {
   max-width: 100%;
+}
+
+.paragraph {
+  padding: 20px;
 }
 
 .acknowledgements-container {
